Update occup and industry paragraphs

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -55,28 +55,21 @@ The datasets received do not contain ID information. In the GLD project, we have
 Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh. The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
 
 
-### Frequency of surveys and its impact on questionnaire design
-
-There have been changes over time in terms of the frequency of the survey rounds. Between 1984 and 1997, there survey is conducted three times a year. The first round used to be conducted in February to coincide with the non-agricultural season. The second round was normally conducted in May to account for the labor force entrants coming from the newly graduated students. The third round was normally held in August during the Agricultural season. Between 1998 and 2001, the Thailand LFS began to conduct the survey quarterly. And from 2001 onwards, the survey was conducted monthly.
-
-In the years when LFS only had 3 rounds, there is a shorter set of questions asked in the second round. Questions not asked in the second round include: (a) income/wage received, (b) the frequency at which the income/wage is received, (c) province and area of migration, (d) reasons for migration, (e) size of establishment in terms of number of employees, and (f) presence of labor union in the place of employment. 
-
-### Missing rounds
-
-This is to note that there are no harmonized LFS datasets for all quarters of 2013 and the 4th quarter of 2012 as we are not able to uniquely identify the observations given the various combinations of the sampling variables available in the dataset. 
-
 ### Migration
 
 Questions relating to migration were asked only until 2000. Information was available on individual’s previous area and province of residence, and reason for migration. However, the questions were only asked in the first and third rounds of the surveys. 
 
-### Differences in defining unemployment
-
-The Thailand NSO reports unemployment to include individuals that are either seeking work or available for work. In contrast, the GLD defines the unemployed as those who are seeking and available for work. More details in a [separate document here](Labor%20force%20status.md)
-
 ### Employment: Industry Classification
+The Bangladesh Labor Force Survey (LFS) employs its national industry classification system called the Bangladesh Standards for Industrial Classification (BSIC), which is adapted from the International Standards for Industrial Classification (ISIC).
 
-The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
+BSIC and ISIC classifications are comparable at the two-digit level. Over the years, the BSIC has been updated, resulting in different versions being used throughout the LFS. For instance, the 2005 LFS utilizes the BSIC 2001, which is comparable to ISIC version 3, while all subsequent rounds employ the BSIC 2009, which is in line with ISIC version 4.
+
+A [correspondence table](Utilities/BSIC_code.pdf) is available for mapping BSIC 2001 codes to ISIC version 3 codes at the four-digit level. However, the team is currently gathering reference materials to determine how to map the BSIC 2009 to ISIC version 4 at the four-digit level. In the meantime, two-digit BSIC codes are used to identify the corresponding ISIC version 4 codes.
 
 ### Employment: Occupation Classification
+The Bangladesh Labor Force Survey (LFS) utilizes various occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was applied in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was employed in the 2013, 2015, and 2016 rounds.
 
-The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
+Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
+
+
+### Wages
