Add draft paragraph on concept of employment

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -46,6 +46,15 @@ The official reports detail estimates by area of residence (urban or rural), and
 
 ## Other noteworthy aspects
 
+### Concept of employment
+
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The Bangladesh LFS reports have consistently defined employment as including individuals working for their own consumption. Although this definition does not align with international standards, the LFS rounds starting in 2015 collected information on individuals' intentions for economic activity, whether for sale or own consumption. This information can be used to code employment to exclude individuals whose primary intention for economic activity is own consumption. This approach allows us to adopt a definition of employment that aligns with international standards. However, adopting this break in definition makes it challenging to meaningfully compare data over time. To address this, we provide a code that enables us to identify employment using the previous definition. The precise details can be found in a[separate document here](Converting%20between%20ICLS%20Definitions.md)
+
+
 ### Household ID
 
 The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and the household identification number. 
@@ -53,11 +62,6 @@ The datasets received do not contain ID information. In the GLD project, we have
 ### Geographic Information
 
 Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh. The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
-
-
-### Migration
-
-Questions relating to migration were asked only until 2000. Information was available on individual’s previous area and province of residence, and reason for migration. However, the questions were only asked in the first and third rounds of the surveys. 
 
 ### Employment: Industry Classification
 The Bangladesh Labor Force Survey (LFS) employs its national industry classification system called the Bangladesh Standards for Industrial Classification (BSIC), which is adapted from the International Standards for Industrial Classification (ISIC).
@@ -70,6 +74,3 @@ A [correspondence table](Utilities/BSIC_code.pdf) is available for mapping BSIC 
 The Bangladesh Labor Force Survey (LFS) utilizes various occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was applied in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was employed in the 2013, 2015, and 2016 rounds.
 
 Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
-
-
-### Wages
