changes ilo info

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -103,10 +103,10 @@ The DANE used a version of the international industry classification or ISIC  to
 | 2020-2021 |ISIC COLOMBIA AC 4| ISIC REV 4 |
 
 ### Employed population 
-Please, note that the number of self employed has a jump between 2008 and 2009. This is in line with the ILO numbers. Visit [this](https://www.ilo.org/shinyapps/bulkexplorer53/?lang=en&id=EMP_TEMP_SEX_AGE_STE_NB_A) website for further details of the numbers shown below.
+The categories of paid employees and self-employment from the variable employment status (empstat) changed between 2007 and 2008. The figure below shows that the number of self-employed increased between 2007 and 2008 while the number of paid employees cut down. The change is in line with ILO numbers. In the ILO data, 36.2% of employed individuals reported working by their own account in 2007. In 2008, the number jumped to 40.7%, and it remained stable thereafter, with 41.8% in 2009. Please, visit [this](https://www.ilo.org/shinyapps/bulkexplorer53/?lang=en&id=EMP_TEMP_SEX_AGE_STE_NB_A) website for further details.
 
 <br></br>
-![](utilities/Picture1.png)
+![](utilities/Picture2.png)
 <br></br>
 
 ###  Additional information
