Small expansion on empstat jump in COL GEIH CSD

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -102,11 +102,12 @@ The DANE used a version of the international industry classification or ISIC  to
 |2007-2019| ISIC COLOMBIA AC 3 | ISIC REV 3.1 |
 | 2020-2021 |ISIC COLOMBIA AC 4| ISIC REV 4 |
 
-### Employed population 
-The categories of paid employees and self-employment from the variable employment status (empstat) changed between 2007 and 2008. The figure below shows that the number of self-employed increased between 2007 and 2008 while the number of paid employees cut down. The change is in line with ILO numbers. In the ILO data, 36.2% of employed individuals reported working by their own account in 2007. In 2008, the number jumped to 40.7%, and it remained stable thereafter, with 41.8% in 2009. Please, visit [this](https://www.ilo.org/shinyapps/bulkexplorer53/?lang=en&id=EMP_TEMP_SEX_AGE_STE_NB_A) website for further details.
+### Jumps in employment status composition at the start of the time series
+
+The categories of paid employees and self-employment from the variable `empstat` (employment status) see a marked jump between 2007 and 2008, with the other categories staying constant (see figure below). While the GLD team has no clear explanation for this somewhat sudden jump, the change is in line with ILO numbers. In the ILO data, 36.2% of employed individuals reported working by their own account in 2007. In 2008, the number jumped to 40.7%, and it remained stable thereafter, with 41.8% in 2009. Please, visit [the ILOSTAT data application website](https://www.ilo.org/shinyapps/bulkexplorer53/?lang=en&id=EMP_TEMP_SEX_AGE_STE_NB_A) for further details.
 
 <br></br>
-![](utilities/Picture2.png)
+![Behaviour of empstat variable in first fie years of the series](utilities/Picture2.png)
 <br></br>
 
 ###  Additional information
