--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -42,7 +42,7 @@ In 2010, the LFS updated its frame to improve the quality and reliability of the
 
 ## What is the significance level?
 
-The official reports detail estimates by area of residence (urban or rural), and division. 
+The official reports detail estimates by area of residence (urban or rural), and the first level administrative units, called *divisions* in Bangladesh. 
 
 ## Other noteworthy aspects
 
@@ -61,7 +61,11 @@ The datasets received do not contain ID information. In the GLD project, we have
 
 ### Geographic Information
 
-Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh. The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
+As of the time of writing (april 2023) Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh (see figure below). The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
+
+<br></br>
+![BGD_divisions](utilities/bgd_divisions.png)
+<br></br>
 
 ### Employment: Industry Classification
 The Bangladesh Labor Force Survey (LFS) employs its national industry classification system called the Bangladesh Standards for Industrial Classification (BSIC), which is adapted from the International Standards for Industrial Classification (ISIC).
