--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -61,20 +61,55 @@ The datasets received do not contain ID information. In the GLD project, we have
 
 ### Geographic Information
 
-As of the time of writing (april 2023) Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh (see figure below). The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
+As of the time of writing (april 2023) Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh (see figure below). 
 
 <br></br>
-![BGD_divisions](utilities/bgd_divisions.png)
+![BGD_divisions](Utilities/bgd_divisions.png)
 <br></br>
+
+The table below shows the divisions as of writing and what divisions they belonged to at the earliest survey (currently 2005)
+
+| Divisions as of april 2023    | Divisions in 2005             |
+|:-----------------------------:|:------------------------------|
+| Barisal                       | Barisal                       |
+| Chittagong                    | Chittagong                    |
+| Dhaka                         | Dhaka                         |
+| Khulna                        | Khulna                        |
+| Mymenshingh                   | Dhaka                         |
+| Rajshahi                      | Rajshahi                      |
+| Rangpur                       | Rajshahi                      |
+| Sylhet                        | Sylhet                        |
+
+The division of Rangpur was created in 2010, splitting off Rajshahi, and consists of the districts of Dinajpur, Kurigram, Gaibandha, Lalmonirhat, Nilphamari, Panchagarh, Rangpur, and Thakurgaon.
+
+The division of Mymensingh was created in 2015, splitting off Dhaka, and consists of the districts of Jamalpur. Mymensingh, Netrokona, and Sherpur.
 
 ### Employment: Industry Classification
+
 The Bangladesh Labor Force Survey (LFS) employs its national industry classification system called the Bangladesh Standards for Industrial Classification (BSIC), which is adapted from the International Standards for Industrial Classification (ISIC).
 
+| Year | Classification in survey | ISIC revision mapped to | How mapped                |
+|:----:|:------------------------:||:----------------------:|:--------------------------|
+| 2005 | BSIC 2001                | ISIC revision 3         | With correspondence table |
+| 2010 | BSIC 2009                | ISIC revision #         | First two digits          |
+| 2013 | Unknonw                  | ISIC revision #         | First two digits          |
+
+For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
+
+For 2009, ##TEXT##
+
+In the case of 2013, the actual version is unkonwn, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
+
+** Original text **
 BSIC and ISIC classifications are comparable at the two-digit level. Over the years, the BSIC has been updated, resulting in different versions being used throughout the LFS. For instance, the 2005 LFS utilizes the BSIC 2001, which is comparable to ISIC version 3, while all subsequent rounds employ the BSIC 2009, which is in line with ISIC version 4.
 
 A [correspondence table](Utilities/BSIC_code.pdf) is available for mapping BSIC 2001 codes to ISIC version 3 codes at the four-digit level. However, the team is currently gathering reference materials to determine how to map the BSIC 2009 to ISIC version 4 at the four-digit level. In the meantime, two-digit BSIC codes are used to identify the corresponding ISIC version 4 codes.
+** End original text **
 
 ### Employment: Occupation Classification
+
+**Kindly include a table a description as above for industry**
+
 The Bangladesh Labor Force Survey (LFS) utilizes two different occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was used in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was used in the 2013, 2015, and 2016 rounds.
 
 Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
