--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -91,14 +91,20 @@ The Bangladesh Labor Force Survey (LFS) employs its national industry classifica
 | Year | Classification in survey | ISIC revision mapped to | How mapped                |
 |:----:|:------------------------:|:-----------------------:|:--------------------------|
 | 2005 | BSIC 2001                | ISIC revision 3         | With correspondence table |
-| 2010 | BSIC 2009                | ISIC revision #         | First two digits          |
-| 2013 | Unknonw                  | ISIC revision #         | First two digits          |
+| 2010 | BSIC 2009                | ISIC revision 4         | First two digits          |
+| 2013 | Unknown                  | ISIC revision 4         | First two digits          |
 
 For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
 
 For 2009, ##TEXT##
 
 In the case of 2013, the actual version is unkonwn, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
+
+BSIC 2009 is comparable with the ISIC rev. 4 at 2 digits except for an additional two-digit code that is not in ISIC, and neither was it reported as an industry of any individual in either survey. 
+
+<img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
+
+
 
 ** Original text **
 BSIC and ISIC classifications are comparable at the two-digit level. Over the years, the BSIC has been updated, resulting in different versions being used throughout the LFS. For instance, the 2005 LFS utilizes the BSIC 2001, which is comparable to ISIC version 3, while all subsequent rounds employ the BSIC 2009, which is in line with ISIC version 4.
