Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -96,26 +96,22 @@ The Bangladesh Labor Force Survey (LFS) employs its national industry classifica
 
 For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
 
-For 2010, the industries are classified using BSIC 2009, which is comparable with the ISIC rev. 4 at 2 digits. There is an additional two-digit code that is not in ISIC, but neither was it reported as an industry of any individual in the survey. 
+For 2010, the industries are classified using BSIC 2009, which is comparable with the ISIC rev. 4 at 2 digits. There is an additional two-digit code that is not in ISIC (see table below), but neither was it reported as an industry of any individual in the survey. 
+
+In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
 
 <img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
 
 
-In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
 
-
-
-
-
-** Original text **
-BSIC and ISIC classifications are comparable at the two-digit level. Over the years, the BSIC has been updated, resulting in different versions being used throughout the LFS. For instance, the 2005 LFS utilizes the BSIC 2001, which is comparable to ISIC version 3, while all subsequent rounds employ the BSIC 2009, which is in line with ISIC version 4.
-
-A [correspondence table](Utilities/BSIC_code.pdf) is available for mapping BSIC 2001 codes to ISIC version 3 codes at the four-digit level. However, the team is currently gathering reference materials to determine how to map the BSIC 2009 to ISIC version 4 at the four-digit level. In the meantime, two-digit BSIC codes are used to identify the corresponding ISIC version 4 codes.
-** End original text **
 
 ### Employment: Occupation Classification
 
-**Kindly include a table a description as above for industry**
+| Year | Classification in survey | ISCO revision mapped to | How mapped                |
+|:----:|:------------------------:|:-----------------------:|:--------------------------|
+| 2005 | ISCO 1988                | ISCO 1988               | First two digits          |
+| 2010 | ISCO 1988                | ISCO 1988               | First two digits          |
+| 2013 | BSCO 2012                | ISCO 2008               | First two digits          |
 
 The Bangladesh Labor Force Survey (LFS) utilizes two different occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was used in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was used in the 2013, 2015, and 2016 rounds.
 
