Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -14,20 +14,18 @@
 
 ## What is the BGD LFS?
 
-The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for the five most recent rounds: 2005-06, 2010, 2013, 2015-16, and 2016-17. In the latest two rounds (2015-16 and 2016-17), the surveys were renamed as the Quarterly Labor Force Survey (QLFS), providing data on a quarterly basis to offer a more detailed understanding of labor market dynamics. Additionally, the questionnaire was updated to gather information on the own-use production of goods and services, a crucial aspect of the informal labor market and subsistence activities in Bangladesh. Thus, a [separate section](https://github.com/worldbank/gld/tree/BGD/Support/B%20-%20Country%20Survey%20Details/BGD/QLFS) is prepared to provide more details on the QLFS.
+The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for three LFS rounds: 2005-06, 2010, and 2013. 
 
 ## What does the BGD LFS cover?
 
 The Bangladesh LFS is a labor force survey with information on demographic characteristics, education, and labor market activities over the past 7 days. The harmonized years and sample sizes used in the GLD harmonization are as follows:
+
 | Year | HH count | Individual count |
 |---|---|---|
 | 2005 |          40,000  |                      188,487  |
 | 2010 |          43,949  |                      199,274 |
 | 2013 |          36,242  |                      156,987  |
-| 2015-16 |          121,082  |                      503,756  |
-| 2016-17 |          122,455|                      493,886  |
 
-During the 2015-16 and 2016-17 rounds, the Bangladesh LFS implemented a rotational sampling design, in which individuals were interviewed for two consecutive quarters before being replaced. For these two rounds, the table above presents household and individual frequency data distinctively for each quarter.
 
 ## Where can the data be found?
 
@@ -35,7 +33,7 @@ The datasets are not accessible to the public and researchers have to request th
 
 ## What is the sampling procedure?
 
-The Labor Force Survey (LFS) in Bangladesh employs a two-stage stratified sampling design to gather representative data on the country's labor force. This sampling methodology involves selecting Primary Sampling Units (PSUs) in the first stage and households within each PSU in the second stage. Both stages employ random selection techniques, ensuring the sample's representativeness. In the 2015-16 and 2016-17 rounds, the LFS implemented a rotational panel strategy, where some households in each cluster were replaced by new ones every two quarters.
+The Labor Force Survey (LFS) in Bangladesh employs a two-stage stratified sampling design to gather representative data on the country's labor force. This sampling methodology involves selecting Primary Sampling Units (PSUs) in the first stage and households within each PSU in the second stage. Both stages employ random selection techniques, ensuring the sample's representativeness. 
 
 In 2010, the LFS updated its frame to improve the quality and reliability of the estimates. Before then, the LFS utilized the Integrated Multipurpose Sample (IMPS) design, which consisted of 1,000 PSUs covering both rural and urban areas. However, as the IMPS areas became outdated, the LFS transitioned to an updated Master Sampling Frame in 2010. This new design was based on the 2001 Population Census enumeration areas and expanded the number of PSUs to 1,500, increasing the number of surveyed households.
 
@@ -46,22 +44,13 @@ The official reports detail estimates by area of residence (urban or rural), and
 
 ## Other noteworthy aspects
 
-### Concept of employment
-
-Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
-
-In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
-
-The Bangladesh LFS reports have consistently defined employment as including individuals working for their own consumption. Although this definition does not align with international standards, the LFS rounds starting in 2015 collected information on individuals' intentions for economic activity, whether for sale or own consumption. This information can be used to code employment to exclude individuals whose primary intention for economic activity is own consumption. This approach allows us to adopt a definition of employment that aligns with international standards. However, adopting this break in definition makes it challenging to meaningfully compare data over time. To address this, we provide a code that enables us to identify employment using the previous definition. The precise details can be found in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
-
-
 ### Household ID
 
 The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and the household identification number. 
 
 ### Geographic Information
 
-As of the time of writing (april 2023) Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh (see figure below). 
+As of the time of writing (April 2023) Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh (see figure below). 
 
 <br></br>
 ![BGD_divisions](Utilities/bgd_divisions.png)
@@ -101,8 +90,6 @@ For 2010, the industries are classified using BSIC 2009, which is comparable wit
 In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
 
 <img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
-
-
 
 
 ### Employment: Occupation Classification
