Add hyperlink to QLFS

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -14,7 +14,7 @@
 
 ## What is the BGD LFS?
 
-The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for three LFS rounds: 2005-06, 2010, and 2013. 
+The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for last LFS rounds, 2005-06, 2010, and 2013, before being replaced by the [Quarterly Labor Force Survey (QLFS)](../QLFS/Introduction%20to%20BGD%20QLFS.md)
 
 ## What does the BGD LFS cover?
 
