Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -107,4 +107,4 @@ Although the survey documentation states that the occupational codes used in the
 
 ### Wages
 
-Information on wages are collected using different information. In 2010 and 2013, previous month wages were asked. Meanwhile, in 2005, the reference period for wages are distinguished between day laborers and wage workers. Day laborers' wages were reported on a weekly basis, while wage workers' wages were reported on a monthly basis. This information was not provided in the questionnaire, but the reported wage data in the [2005 survey report](Labour Force Survey-2005-6.PDF) were replicated using this distinction. 
+Information on wages are collected using different information. In 2010 and 2013, previous month wages were asked. Meanwhile, in 2005, the reference period for wages are distinguished between day laborers and wage workers. Day laborers' wages were reported on a weekly basis, while wage workers' wages were reported on a monthly basis. This information was not provided in the questionnaire, but the reported wage data in the [2005 survey report](Utilities/Labour%20Force%20Survey-2005-6.pdf) were replicated using this distinction. 
