Add info on empstat

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -104,7 +104,10 @@ The Bangladesh Labor Force Survey (LFS) utilizes two different occupational clas
 
 Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
 
-
 ### Wages
 
 Information on wages are collected based on different reference time periods. In 2010 and 2013, previous month wages were asked. Meanwhile, in 2005, the reference period for wages are distinguished between day laborers and wage workers. Day laborers' wages were reported on a weekly basis, while wage workers' wages were reported on a monthly basis. This information was not provided in the questionnaire, but the reported wage data in the [2005 survey report](Utilities/Labour%20Force%20Survey-2005-6.PDF) were replicated using this distinction. 
+
+### Employment Status
+
+The employment status categories in the Bangladesh LFS vary over the years. The precise details on coding the `empstat` variable is covered in a separate document [here](Employment%20status.md).
